--- a/style.css
+++ b/style.css
@@ -879,6 +879,9 @@ button:hover {
   .book-table img{
     padding-right: 50px; 
   }
+   .header .icons div {
+    font-size: 20px;
+  }
 }
 
 @media (max-width: 345px) {
